Bug 364582 - phonon-backend-vlc fails to build (maybe gcc 6 related?)
Summary: phonon-backend-vlc fails to build (maybe gcc 6 related?)
Status: RESOLVED FIXED
Alias: None
Product: phonon-backend-vlc
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: 0.9-git
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: 0.9
Assignee: Harald Sitter
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-06-21 09:01 UTC by George Diamantopoulos
Modified: 2016-06-21 13:13 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
phonon-vlc-0.9.0 build log on gentoo (74.12 KB, text/plain)
2016-06-21 09:03 UTC, George Diamantopoulos
Details

Note You need to log in before you can comment on or make changes to this bug.
Description George Diamantopoulos 2016-06-21 09:01:51 UTC
Both 0.9.0 and current master as of this posting fail to build on my gentoo system. I'm attaching the build log here.

Reproducible: Always
Comment 1 George Diamantopoulos 2016-06-21 09:03:11 UTC
Created attachment 99639 [details]
phonon-vlc-0.9.0 build log on gentoo
Comment 2 Harald Sitter 2016-06-21 13:13:57 UTC
Git commit 6268ba35692acdb9cfdd062a807f957f499fef2c by Harald Sitter.
Committed on 21/06/2016 at 13:12.
Pushed by sitter into branch '0.9'.

give libvlc a prefix, to avoid it preprocessing on libvlc_foo lines

i.e. technically we should always have
file header > qt include > vlc include > other include > other pvlc include
but apparently there is a case where this isn't being done so
utils/libvlc.h is included before the actual vlc headers which means by
the time the vlc headers are preprocessed the 'libvlc' macro was already
defined which then caused to it being applied to libvlc_foo_kitten_magic
which naturally resulted in compilation failure.

M  +3    -3    src/backend.cpp
M  +4    -4    src/devicemanager.cpp
M  +1    -1    src/effectmanager.cpp
M  +1    -1    src/media.cpp
M  +1    -1    src/mediaplayer.cpp
M  +2    -2    src/utils/libvlc.h

http://commits.kde.org/phonon-vlc/6268ba35692acdb9cfdd062a807f957f499fef2c