give libvlc a prefix, to avoid it preprocessing on libvlc_foo lines

i.e. technically we should always have
file header > qt include > vlc include > other include > other pvlc include
but apparently there is a case where this isn't being done so
utils/libvlc.h is included before the actual vlc headers which means by
the time the vlc headers are preprocessed the 'libvlc' macro was already
defined which then caused to it being applied to libvlc_foo_kitten_magic
which naturally resulted in compilation failure.

BUG: 364582