src/mediaplayer.cpp
@@ -50,7 +50,7 @@ namespace VLC {
 MediaPlayer::MediaPlayer(QObject *parent)
     : QObject(parent)
     , m_media(0)
-    , m_player(libvlc_media_player_new(libvlc))
+    , m_player(libvlc_media_player_new(pvlc_libvlc))
     , m_doingPausedPlay(false)
     , m_volume(75)
     , m_fadeAmount(1.0f)
